--- a/config.toml
+++ b/config.toml
@@ -31,10 +31,10 @@ publishDir = "docs"
 
     # Share buttons on blog post pages
     [params.share]
-        twitter                  = true
-        facebook                 = true
-        googlePlus               = true
-        pinterest                = true
+        twitter                  = false
+        facebook                 = false
+        googlePlus               = false
+        pinterest                = false
 
     # Social icons appear in introduction and contact section. Add as many more as you like.
     # Icon pack "fab" includes social network icons, see: https://fontawesome.com/icons?d=gallery&s=brands&m=free
