--- a/config.toml
+++ b/config.toml
@@ -1,11 +1,11 @@
-baseURL                          = "https://informusica.github.io/ai4culture/"   # Your domain name. Must end with "/"
+baseURL                          = "ai4culture/"   # Your domain name. Must end with "/"
 theme                            = "introduction"
 DefaultContentLanguage           = "nl"                    # Default language for multilingual sites
 # disqusshortname                 = ""                     # https://gohugo.io/content-management/comments
 # googleAnalytics                 = ""                     # https://gohugo.io/templates/internal/#google-analytics
 
 publishDir = "docs"
-canonifyURLs = true
+
 
 [params]
     themeStyle                   = "light"                 # Choose "light" or "dark"
